--- a/yars/apps/frontend/templates/frontend/index.html
+++ b/yars/apps/frontend/templates/frontend/index.html
@@ -6,9 +6,10 @@
   <head>
     <meta charset="utf-8">
     <title>YARS &mdash; Yet Another Rating System</title>
+    <link rel="stylesheet" href="{% static "frontend/main.bundle.css" %}">
   </head>
   <body>
     <div id="app"></div>
-    <script src="{% static "frontend/main.js" %}"></script>
+    <script src="{% static "frontend/main.bundle.js" %}"></script>
   </body>
 </html>
