--- a/templates/index.html
+++ b/templates/index.html
@@ -6,10 +6,10 @@
   <head>
     <meta charset="utf-8">
     <title>YARS &mdash; Yet Another Rating System</title>
-    <link rel="stylesheet" href="{% static "frontend/main.bundle.css" %}">
+    <link rel="stylesheet" href="{% static "main.bundle.css" %}">
   </head>
   <body>
     <div id="app"></div>
-    <script src="{% static "frontend/main.bundle.js" %}"></script>
+    <script src="{% static "main.bundle.js" %}"></script>
   </body>
 </html>
